Update 28. Email Header Analysis.md

--- a/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
+++ b/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
@@ -33,9 +33,12 @@ By examining these headers, investigators can:
 
 ### 🧪 Example Email Header (Simplified)
 
-```text
-Received: from unknown (HELO mail.example.com) (192.168.1.10)
-by mail.yourdomain.com with SMTP; Thu, 1 Jul 2025 +0530
+```mermaid
+
+flowchart LR
+    A[Unknown Sender] -->|HELO mail.example.com| B[192.168.1.10]
+    B -->|SMTP Transfer| C[mail.yourdomain.com]
+    C --> D[📅 1 Jul 2025, +0530]
 ```
 
 #### Breakdown:
