Update 25. Image Metadata.md

--- a/2. Reconnaissance (Footprinting)/25. Image Metadata.md
+++ b/2. Reconnaissance (Footprinting)/25. Image Metadata.md
@@ -1,6 +1,6 @@
 
-# 🔥 Image Metadata 
 
+# 🔥 Image Metadata 
 
 ## 🖼️ What is Image Metadata?
 
@@ -11,6 +11,36 @@
 * 📷 **How** it was taken (camera settings)
 * 🧑‍💻 **Who** created or edited it
 
+---
+
+```mermaid
+flowchart LR
+    Photo[Photo File] --> Extract[Extract Metadata]
+    Extract --> Time[Date & Time]
+    Extract --> Location[GPS Location]
+    Extract --> Camera[Camera Details]
+    Extract --> Software[Editing Software Used]
+    Extract --> Size[Image Size & Orientation]
+
+    subgraph Tools_in_Kali
+        Exiftool[ExifTool]
+        Exiv2[Exiv2]
+        mat2[MAT2]
+    end
+
+    subgraph Online_Tools
+        Jeffrey[Jeffreys EXIF Viewer]
+        Foto[FotoForensics]
+        Meta2Go[Metadata2Go]
+    end
+
+    Exiftool --> Extract
+    Exiv2 --> Extract
+    mat2 --> Extract
+    Jeffrey --> Extract
+    Foto --> Extract
+    Meta2Go --> Extract
+```
 ---
 
 ## 📂 Types of Image Metadata
