Update 24. Open-Source Intelligence (OSINT).md

--- a/2. Reconnaissance (Footprinting)/24. Open-Source Intelligence (OSINT).md
+++ b/2. Reconnaissance (Footprinting)/24. Open-Source Intelligence (OSINT).md
@@ -105,3 +105,52 @@ It involves data collection from sources like websites, social media, public rec
    * Document findings with evidence, screenshots, and summaries
 
 ---
+
+```mermaid
+flowchart TD
+    A[What is OSINT?] --> B[Collect Public Info Legally]
+    B --> C[Transform into Actionable Intelligence]
+
+    C --> D1[Cybersecurity]
+    C --> D2[Law Enforcement]
+    C --> D3[Military Intel]
+    C --> D4[Business Analysis]
+    C --> D5[Journalism]
+
+    subgraph Data_Sources [Sources of OSINT]
+        S1[Websites & Blogs]
+        S2[Social Media]
+        S3[Public Records]
+        S4[Maps & Metadata]
+        S5[Technical Info]
+    end
+    D1 --> Data_Sources
+    D2 --> Data_Sources
+    D3 --> Data_Sources
+    D4 --> Data_Sources
+    D5 --> Data_Sources
+
+    subgraph Techniques
+        T1[Google Dorking]
+        T2[Web Scraping]
+        T3[Social Monitoring]
+        T4[Metadata Analysis]
+        T5[Geolocation]
+        T6[Passive Recon]
+        T7[Active Recon]
+    end
+    Data_Sources --> Techniques
+
+    subgraph Tools
+        TO1[Maltego]
+        TO2[Shodan]
+        TO3[SpiderFoot]
+        TO4[Recon-ng]
+        TO5[theHarvester]
+        TO6[ExifTool]
+        TO7[Metagoofil]
+    end
+    Techniques --> Tools
+
+```
+---
