Update 23. GitHub Recon.md

--- a/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
+++ b/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
@@ -45,6 +45,34 @@ A powerful part of **OSINT (Open Source Intelligence)**, GitHub Recon is essenti
 
 ---
 
+```mermaid
+flowchart TD
+    A[GitHub Recon] --> B[Target Identification]
+    B --> B1[Org/User Search]
+    B --> B2[GitHub Dorks]
+
+    A --> C[Info Discovery]
+    C --> C1[Secrets & Keys]
+    C --> C2[Config Files]
+    C --> C3[Emails & Usernames]
+    C --> C4[Infra Info]
+
+    A --> D[Recon Tools]
+    D --> D1[GitLeaks]
+    D --> D2[TruffleHog]
+    D --> D3[GitHound]
+    D --> D4[Gitrob]
+    D --> D5[Wraith]
+
+    D --> E[Wordlists & Resources]
+    E --> E1[SecLists]
+    E --> E2[PayloadAllTheThings]
+
+```
+
+
+---
+
 ## 🛠️ How to Perform GitHub Recon
 
 ### 🔍 1. Define the Target
