Update 20. Shodan Recon GUI and CLI.md

--- a/2. Reconnaissance (Footprinting)/20. Shodan Recon GUI and CLI.md
+++ b/2. Reconnaissance (Footprinting)/20. Shodan Recon GUI and CLI.md
@@ -18,10 +18,51 @@
 * 📚 Filter Reference: [https://www.shodan.io/search/filters](https://www.shodan.io/search/filters)
 
 ---
-
 ## ⚙️ How Shodan Works
 
+```mermaid
+flowchart LR
+    A[Start: Target Identification] --> B1[IP Address]
+    A --> B2[Domain Name]
+    A --> B3[Organization]
+    A --> B4[Country/City Filter]
+
+    A --> C[Shodan Scanning]
+    C --> C1[Port Scanning]
+    C --> C2[Banner Grabbing]
+    C --> C3[Service Detection]
+
+    C --> D[Data Collected]
+    D --> D1[Software & Version]
+    D --> D2[SSL Certificate Info]
+    D --> D3[Device Type]
+    D --> D4[Login Page Titles]
+
+    D --> E[Filtering Examples]
+    E --> E1[port:80 product:apache]
+    E --> E2[device:webcam country:IN]
+    E --> E3[vuln:CVE-2023-XXXX]
+
+    D --> F[Recon Techniques]
+    F --> F1[hostname:]
+    F --> F2[org:]
+    F --> F3[asn:]
+    F --> F4[net:]
+    F --> F5[geo:]
+
+    D --> G[Access Methods]
+    G --> G1[Web UI]
+    G --> G2[Shodan CLI]
+    G --> G3[Shodan API]
+
+    G --> H[Tools + Usage]
+    H --> H1[Download Results]
+    H --> H2[Parse with CLI]
+    H --> H3[Filter CVEs]
+
+```
 ---
+## ⚙️ How Shodan Works
 
 ### 1. **Global Internet Scanning**
 
