Update 01. Reconnaissance (Footprinting).md

--- a/2. Reconnaissance (Footprinting)/01. Reconnaissance (Footprinting).md
+++ b/2. Reconnaissance (Footprinting)/01. Reconnaissance (Footprinting).md
@@ -5,6 +5,11 @@
 
 ---
 
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/1.%20Information%20Security/Images/01.%20Reconnaissance.png?raw=true" alt="Reconnaissance Diagram" width="100%">
+
+
+---
+
 ## Types of Reconnaissance
 
 ### 1. Passive Reconnaissance
