Update 02. Website Reconnaissance.md

--- a/2. Reconnaissance (Footprinting)/02. Website Reconnaissance.md
+++ b/2. Reconnaissance (Footprinting)/02. Website Reconnaissance.md
@@ -5,6 +5,10 @@ Website reconnaissance is the process of gathering public info about a target we
 
 ---
 
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/1.%20Information%20Security/Images/02.%20Website%20Recon.png?raw=true" alt="Website Reconnaissance Diagram" width="100%">
+
+
+---
 ## 1️⃣ What & Why
 
 **Purpose:**
