Update 23. GitHub Recon.md

--- a/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
+++ b/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
@@ -14,6 +14,11 @@
 
 ---
 
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/1.%20Information%20Security/Images/23.%20Githube%20Recone.png?raw=true" alt="GitHub Reconnaissance Diagram" width="100%">
+
+
+---
+
 ## 🕵️‍♂️ What is GitHub Recon?
 
 **GitHub Recon** refers to the process of gathering **publicly accessible information** from GitHub to discover:
