Update 28. Email Header Analysis.md

--- a/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
+++ b/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
@@ -19,6 +19,11 @@
 
 ---
 
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/1.%20Information%20Security/Images/28.%20Email%20Tracing.png?raw=true" alt="Email Tracing Diagram" width="100%">
+
+
+---
+
 ## ⚙️ How Email Tracking Works
 
 When an email is sent, each mail server it passes through adds a `Received:` header to the email metadata.
