Update 32. Reconnaissance Checklist.md

--- a/2. Reconnaissance (Footprinting)/32. Reconnaissance Checklist.md
+++ b/2. Reconnaissance (Footprinting)/32. Reconnaissance Checklist.md
@@ -269,5 +269,52 @@ Real-time tracking of mentions:
 
 * [https://www.google.com/alerts](https://www.google.com/alerts)
 
+### 34. Maltego
+
+🔗 [https://www.maltego.com](https://www.maltego.com)
+
+**Maltego** is a powerful OSINT and graphical link analysis tool used to visualize and map relationships between digital and human assets.
+
+#### 🔍 Key Capabilities:
+
+* Graph-based drag-and-drop interface
+* Built-in transforms for domains, IPs, metadata, social profiles, and more
+* Integration with OSINT sources, search engines, and social platforms
+* Supports **custom transforms** using Python or local APIs
+
+#### 👁️ Use Cases:
+
+* Discover links between:
+
+  * Domains 🌐
+  * IP addresses 📡
+  * Email addresses 📧
+  * Social media profiles 📱
+  * Phone numbers ☎️
+  * People 👤
+  * Documents & Metadata 📄
+
+> 💡 *Ideal for cyber investigators and red teamers who want rich visual relationships and scalable recon.*
+
+---
+
+### 35. SpiderFoot
+
+🔗 [https://www.spiderfoot.net](https://www.spiderfoot.net)
+
+**SpiderFoot** is an advanced automated OSINT reconnaissance tool for mapping digital footprints across hundreds of data sources.
+
+#### ⚙️ Key Features:
+
+* Fully automated scanning for IPs, domains, emails, netblocks, and credentials
+* Modules for WHOIS, DNS, breaches, TOR, paste sites, and Shodan
+* Available via **Web UI**, **Command-line**, and **API**
+* Integrates with **Maltego** for graphical visualizations
+
+#### 🖥️ CLI Example:
+
+```bash
+python3 sf.py -s example.com -t domain --no-browser
+```
 ---
 
