Update 03. Kali Linux Installation.md

--- a/3. Kali Linux/03. Kali Linux Installation.md
+++ b/3. Kali Linux/03. Kali Linux Installation.md
@@ -86,3 +86,43 @@
 | Custom Kali ISO creation/branding           | Build Scripts          |
 
 ---
+
+# 🔽 Kali Linux Download & Installation Guide (Installer Image)
+
+## ✅ Step 1: Go to the Official Kali Installer Page
+
+👉 [https://www.kali.org/get-kali/#kali-installer-images](https://www.kali.org/get-kali/#kali-installer-images)
+
+This takes you to the **“Kali Installer Images”** section on the official Kali website.
+
+---
+
+## 📥 Step 2: Choose Your ISO to Download
+
+You’ll see multiple ISO options. Here are the two main ones:
+
+### 🟢 **Installer (Recommended)**
+
+* File: `kali-linux-<version>-installer-amd64.iso`
+* 🔹 Use this if you want to install Kali like a normal OS (bare metal or VM)
+* 🔹 Fast and ideal for most users
+* 🔹 Clean and minimal setup
+
+> OR
+
+### 🟡 **Everything ISO (Advanced Users)**
+
+* File: `kali-linux-<version>-everything-amd64.iso`
+* 🔹 Comes with **every Kali tool pre-installed**
+* 🔹 Much larger (\~9GB+)
+* 🔹 Use this **if you want ALL tools offline** (no internet needed later)
+* 🔹 Great for isolated environments or pentest labs
+
+👉 **Choose one:**
+
+| Scenario                      | ISO to Choose      |
+| ----------------------------- | ------------------ |
+| Regular install (recommended) | **Installer ISO**  |
+| Want all tools preloaded      | **Everything ISO** |
+
+---
