Update 03. Kali Linux Installation.md

--- a/3. Kali Linux/03. Kali Linux Installation.md
+++ b/3. Kali Linux/03. Kali Linux Installation.md
@@ -108,7 +108,7 @@ You’ll see multiple ISO options. Here are the two main ones:
 * 🔹 Fast and ideal for most users
 * 🔹 Clean and minimal setup
 
-> OR
+> Downlaod Any One Choose Installer (Recommended) OR Everything ISO
 
 ### 🟡 **Everything ISO (Advanced Users)**
 
