--- a/3. Kali Linux/05. Kali Linux Full Setup Guide.md
+++ b/3. Kali Linux/05. Kali Linux Full Setup Guide.md
@@ -123,7 +123,8 @@ sudo systemctl restart ssh
 
 ```bash
 apt install screen
-screen  # Start a new session
+screen --help
+screen  # Start new session
 ```
 
 ---
