Update 04. Kali Linux Installation in VirtualBox.md

--- a/3. Kali Linux/04. Kali Linux Installation in VirtualBox.md
+++ b/3. Kali Linux/04. Kali Linux Installation in VirtualBox.md
@@ -1,5 +1,10 @@
 # 🐉 Kali Linux Installation & Setup Guide (VirtualBox, Repos, SSH, Drivers)
 ---
+> ### 📝 Blog Post  
+> **[Creating a Dual Bootable PC (Windows + Kali Linux)](https://medium.com/@nikhilpatidar01/creating-a-dual-bootable-pc-windows-kali-linux-1051f303ef17)**  
+> *A complete guide on installing and configuring Windows and Kali Linux on the same system.*
+
+---
 
 ## 🖥️ **Create Virtual Machine (VM) – VirtualBox**
 
