Update 06. NVIDIA Drivers Installation on Kali Linux.md

--- a/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
+++ b/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
@@ -152,7 +152,7 @@ sudo reboot
 
 ---
 
-## CUDA Toolkit Setup (For GPU Acceleration)
+# CUDA Toolkit Setup (For GPU Acceleration)
 
 > Official Site: [CUDA Downloads](https://developer.nvidia.com/cuda-downloads)
 
