Update 06. NVIDIA Drivers Installation on Kali Linux.md

--- a/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
+++ b/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
@@ -6,16 +6,16 @@
 
 ## Step 1: Check Your System Info
 
-```
+```php
 uname -a
 ```
-```
+```php
 lspci | grep -E "VGA|3D"
 ```
 
-Example Output:
+> Example Output:
 
-```
+```php
 VGA compatible controller: Intel Corporation TigerLake-H GT1 [UHD Graphics]
 VGA compatible controller: NVIDIA Corporation GA107M [GeForce RTX 3050 Mobile]
 ```
@@ -24,19 +24,19 @@ VGA compatible controller: NVIDIA Corporation GA107M [GeForce RTX 3050 Mobile]
 
 ## Step 2: Disable the Nouveau Driver (Open Source NVIDIA)
 
-```
+```php
 echo -e "blacklist nouveau\noptions nouveau modeset=0\nalias nouveau off" | sudo tee /etc/modprobe.d/blacklist-nouveau.conf
 ```
-```
+```php
 sudo update-initramfs -u
 ```
-```
+```php
 sudo reboot
 ```
 
 > After reboot:
 
-```
+```php
 lsmod | grep -i nouveau
 ```
 > If it returns **nothing**, Nouveau is disabled successfully.
@@ -45,12 +45,12 @@ lsmod | grep -i nouveau
 
 ##  Step 3: Install NVIDIA Driver
 
-```
+```php
 sudo apt install nvidia-driver nvidia-xconfig
 ```
 > If it gives errors:
 
-```
+```php
 sudo apt install nvidia-xconfig
 ```
 
@@ -58,12 +58,12 @@ sudo apt install nvidia-xconfig
 
 ## Step 4: Find NVIDIA BusID
 
-```
+```php
 nvidia-xconfig --query-gpu-info | grep 'BusID' | cut -d ' ' -f6-
 ```
 > Example BusID Output:
 
-```
+```php
 PCI:1:0:0
 ```
 
@@ -73,13 +73,13 @@ PCI:1:0:0
 
 > Create/Edit the Xorg configuration:
 
-```
+```php
 sudo vim /etc/X11/xorg.conf
 ```
 
 > Paste the following config (replace **BusID** with your actual one if different):
 
-```conf
+```php
 Section "ServerLayout"
     Identifier "layout"
     Screen 0 "nvidia"
@@ -113,13 +113,13 @@ EndSection
 
 ## Step 6: Create Optimus Autostart Script (Fix for GDM)
 
-```
+```php
 sudo vim /usr/share/gdm/greeter/autostart/optimus.desktop
 ```
 
 > Paste this:
 
-```ini
+```php
 [Desktop Entry]
 Type=Application
 Name=Optimus
@@ -130,7 +130,7 @@ X-GNOME-Autostart-Phase=DisplayServer
 
 > Then:
 
-```
+```php
 sudo cp -v /usr/share/gdm/greeter/autostart/optimus.desktop /etc/xdg/autostart/optimus.desktop
 ```
 
@@ -140,13 +140,13 @@ sudo cp -v /usr/share/gdm/greeter/autostart/optimus.desktop /etc/xdg/autostart/o
 
 > If required:
 
-```
+```php
 [ -f /var/run/reboot-required ] && sudo reboot -f
 ```
 
 > Or just:
 
-```
+```php
 sudo reboot
 ```
 
@@ -160,10 +160,10 @@ sudo reboot
 
 ##  Step 1: Add CUDA Repository Keyring
 
-```
+```php
 wget https://developer.download.nvidia.com/compute/cuda/repos/debian12/x86_64/cuda-keyring_1.1-1_all.deb
 ```
-```
+```php
 sudo apt install ./cuda-keyring_1.1-1_all.deb
 ```
 
@@ -171,13 +171,13 @@ sudo apt install ./cuda-keyring_1.1-1_all.deb
 
 ## Step 2: (Optional) Comment Out Kali Default Repos
 
-```
+```php
 sudo vim /etc/apt/sources.list
 ```
 
 > Comment out:
 
-```
+```php
 # deb https://http.kali.org/kali kali-rolling main contrib non-free non-free-firmware
 ```
 
@@ -187,16 +187,16 @@ sudo vim /etc/apt/sources.list
 
 ## Step 3: Install CUDA Toolkit & DKMS
 
-```
+```php
 sudo apt update
 ```
-```
+```php
 sudo apt install cuda-toolkit-12-9
 ```
-```
+```php
 sudo apt install cuda-drivers nvidia-kernel-dkms
 ```
-```
+```php
 sudo reboot
 ```
 
@@ -206,13 +206,13 @@ sudo reboot
 
 > Check if NVIDIA driver is working:
 
-```
+```php
 nvidia-smi
 ```
 
 > Check kernel modules:
 
-```
+```php
 lsmod | grep -i nvidia
 ```
 
@@ -222,10 +222,10 @@ lsmod | grep -i nvidia
 
 ###  Hashcat
 
-```
+```php
 hashcat -I
 ```
-```
+```php
 hashcat -b  # Benchmark
 ```
 ---
