--- a/3. Kali Linux/07. Python, pip, ZSH Shell and Sublime Text Editor.md
+++ b/3. Kali Linux/07. Python, pip, ZSH Shell and Sublime Text Editor.md
@@ -2,7 +2,7 @@
 
 # 1. PYTHON & PIP Setup for Kali Linux
 > After setting up Kali Linux, verify the installed versions of Python and Pip. If mismatched, they can cause conflicts.
-### Step 1: Check Installed Versions
+ ### Step 1: Check Installed Versions
 
 ```php
 python -V
@@ -64,16 +64,15 @@ chsh -s $(which zsh)
 
 ### Step 4: Restart Terminal
 
-Apply the changes by closing and reopening your terminal.
+> Apply the changes by closing and reopening your terminal.
 
 ---
 
 # 3. Install SUBLIME Text Editor
 
-Visit:
-[https://www.sublimetext.com/](https://www.sublimetext.com/)
+> Visit: [https://www.sublimetext.com/](https://www.sublimetext.com/)
 
-Caution ⚠ Or use the terminal to install:
+> Caution ⚠ Or use the terminal to install:
 
 ```php
 wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/sublimehq-archive.gpg > /dev/null
@@ -88,7 +87,7 @@ apt update
 apt install sublime-text
 ```
 
-> Caution: If you've installed the CUDA Toolkit, comment out its repository before proceeding.
+> Caution ⚠:  If you've installed the CUDA Toolkit, comment out its repository before proceeding.
 
 ---
 
@@ -104,7 +103,7 @@ apt install build-essential cmake ninja-build libgtkmm-3.0-dev libgtksourceviewm
 
 ## NVIDIA DRIVER CLEANUP COMMANDS
 
-If anything breaks or misconfigures your system after NVIDIA installation, run these commands to safely remove them:
+> If anything breaks or misconfigures your system after NVIDIA installation, run these commands to safely remove them:
 
 ```php
 apt-get remove --purge nvidia*
@@ -117,7 +116,7 @@ apt autoremove
 
 ## DO NOT RUN THESE AFTER DRIVER INSTALL
 
-These commands may remove important drivers:
+> These commands may remove important drivers:
 
 ```php
 apt autoremove
