Update 06. NVIDIA Drivers Installation on Kali Linux.md

--- a/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
+++ b/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
@@ -229,3 +229,28 @@ hashcat -I
 hashcat -b  # Benchmark
 ```
 ---
+
+
+## NVIDIA DRIVER CLEANUP COMMANDS
+
+> Caution⚠ : In case of the mis-configuration or any error, if you want to remove the NVIDIA drivers just follow the commands mentioned below and the drivers will be removed:
+
+```php
+apt-get remove --purge nvidia*
+rm -rf /etc/X11/xorg.conf
+dpkg --configure -a
+apt autoremove
+```
+
+---
+
+## DO NOT RUN THESE AFTER DRIVER INSTALL
+
+> These commands may remove important drivers:
+
+```php
+apt autoremove
+apt autoclean
+```
+
+---
