Update 06. NVIDIA Drivers Installation on Kali Linux.md

--- a/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
+++ b/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
@@ -233,7 +233,8 @@ hashcat -b  # Benchmark
 
 ## NVIDIA DRIVER CLEANUP COMMANDS
 
-> Caution⚠ : In case of the mis-configuration or any error, if you want to remove the NVIDIA drivers just follow the commands mentioned below and the drivers will be removed:
+> Caution⚠ :
+> In case of the mis-configuration or any error, if you want to remove the NVIDIA drivers just follow the commands mentioned below and the drivers will be removed:
 
 ```php
 apt-get remove --purge nvidia*
@@ -243,10 +244,8 @@ apt autoremove
 ```
 
 ---
-
-## DO NOT RUN THESE AFTER DRIVER INSTALL
-
-> These commands may remove important drivers:
+> After the successful installation of NVIDIA drivers and everything,
+> DON't run the following commands as it can result in the deletion if the drivers.
 
 ```php
 apt autoremove
