Update 07. Python, pip, ZSH Shell, Sublime and All Basic Package Install.md

--- a/3. Kali Linux/07. Python, pip, ZSH Shell, Sublime and All Basic Package Install.md
+++ b/3. Kali Linux/07. Python, pip, ZSH Shell, Sublime and All Basic Package Install.md
@@ -91,7 +91,7 @@ apt install sublime-text
 
 ---
 
-## 4. Install Basic Tools (One-Liner)
+# 4. Install Basic Tools (One-Liner)
 
 > Install all essential tools using the following command:
 
