Update 07. Python, pip, ZSH Shell, Sublime and All Basic Package Install.md

--- a/3. Kali Linux/07. Python, pip, ZSH Shell, Sublime and All Basic Package Install.md
+++ b/3. Kali Linux/07. Python, pip, ZSH Shell, Sublime and All Basic Package Install.md
@@ -106,6 +106,128 @@ apt install sublime-text
 ```php
 apt install build-essential cmake ninja-build libgtkmm-3.0-dev libgtksourceviewmm-3.0-dev libxml++2.6-dev libsqlite3-dev gettext libgspell-1-dev libcurl4-openssl-dev libuchardet-dev libfribidi-dev libvte-2.91-dev libfmt-dev libspdlog-dev rclone vim fonts-lato fonts-open-sans fonts-roboto fonts-mononoki fonts-indic grc python3 python-is-python3 gcc-multilib g++-multilib libtesseract-dev jq python3-pip openvpn network-manager-openvpn network-manager-openvpn-gnome testssl.sh dirsearch wkhtmltopdf virtualbox virtualbox-ext-pack virtualbox-guest-additions-iso golang remmina remmina-plugin-rdp remmina-plugin-secret flameshot ruby whois git curl libpcap-dev wget zip python3-dev pv dnsutils libssl-dev libffi-dev libxml2-dev libxslt1-dev zlib1g-dev nmap apt-transport-https lynx tor medusa xvfb libxml2-utils procps bsdmainutils libdata-hexdump-perl wget curl tmux git nmap masscan unzip chromium rsync coreutils net-tools htop prips xmlstarlet gnome-power-manager jython mesa-utils wmctrl libgl1-mesa-dev xorg-dev
 ```
+---
+
+### Overall Tools Name Work
+---
+
+### Development & Build Tools
+
+Used for compiling software, C/C++ development, and building apps.
+
+* `build-essential` → GCC, G++, make, dpkg-dev
+* `cmake`, `ninja-build` → Build systems
+* `gcc-multilib`, `g++-multilib` → 32-bit/64-bit compatibility
+* `python3`, `python3-pip`, `python-is-python3`, `python3-dev` → Python runtime & dev tools
+* `ruby` → Ruby language
+* `golang` → Go programming language
+* `jython` → Python on Java (useful in some Java-based hacking tools)
 
 ---
 
+### Libraries for GUI / Dev dependencies
+
+Needed by GUI tools and applications.
+
+* `libgtkmm-3.0-dev`, `libgtksourceviewmm-3.0-dev` → GTK+ GUI components
+* `libxml++2.6-dev`, `libxml2-dev`, `libxslt1-dev` → XML handling
+* `libsqlite3-dev` → SQLite database
+* `libssl-dev`, `libffi-dev`, `zlib1g-dev` → Encryption + Compression
+* `libgspell-1-dev` → Spell checking
+* `libcurl4-openssl-dev` → Networking lib
+* `libuchardet-dev` → Encoding detection
+* `libfribidi-dev` → Bidirectional text support
+* `libvte-2.91-dev` → Terminal widget
+* `libfmt-dev`, `libspdlog-dev` → Logging and formatting
+* `libtesseract-dev` → OCR support
+* `libpcap-dev` → Packet capture lib
+
+---
+
+### Testing / Security / Hacking Tools
+
+For penetration testing and recon.
+
+* `testssl.sh` → SSL/TLS scanner
+* `dirsearch` → Directory brute-forcer
+* `masscan` → Fast port scanner
+* `nmap` → Port scanning and service discovery
+* `medusa` → Brute-force login cracker
+* `whois` → Domain information
+* `dnsutils` → DNS query tools
+* `prips` → IP range calculation
+* `tor` → Anonymous routing
+* `rclone` → Cloud storage sync
+* `xvfb` → Headless browser tests
+* `libdata-hexdump-perl` → Hex-dumping Perl module
+
+---
+
+### Networking & VPN
+
+Useful for connectivity, VPNs, and network tools.
+
+* `openvpn`, `network-manager-openvpn`, `network-manager-openvpn-gnome` → VPN
+* `wget`, `curl` → File downloaders
+* `rsync` → File sync
+* `lynx` → Text-based web browser
+* `apt-transport-https` → HTTPS support for APT
+* `coreutils`, `net-tools`, `procps`, `bsdmainutils`, `pv`, `dnsutils`, `xmlstarlet` → CLI system/network tools
+* `tmux` → Terminal multiplexer
+
+---
+
+### Virtualization
+
+Manage virtual machines and ISO support.
+
+* `virtualbox`, `virtualbox-ext-pack`, `virtualbox-guest-additions-iso` → VM creation & drivers
+
+---
+
+### GUI, Desktop, Productivity
+
+Handy graphical tools and UI components.
+
+* `remmina`, `remmina-plugin-rdp`, `remmina-plugin-secret` → Remote desktop client
+* `flameshot` → Screenshot tool
+* `gnome-power-manager` → Power management
+* `wmctrl` → Window manager control
+* `xorg-dev`, `mesa-utils`, `libgl1-mesa-dev` → X11 display support
+* `chromium` → Browser
+* `htop` → Process monitor
+
+---
+
+### Fonts
+
+Better UI and readability (especially for coding & multilingual support).
+
+* `fonts-lato`, `fonts-open-sans`, `fonts-roboto`, `fonts-mononoki`, `fonts-indic`
+
+---
+
+### Utilities
+
+General-purpose tools.
+
+* `gettext` → Translation system
+* `jq` → JSON processor
+* `unzip`, `zip` → Archive tools
+* `grc` → Colorize command output
+
+---
+
+### Summary (By Category)
+
+| Category       | Example Tools                                       |
+| -------------- | --------------------------------------------------- |
+| Dev Tools      | `build-essential`, `gcc-multilib`, `cmake`          |
+| Libraries      | `libssl-dev`, `libcurl4-openssl-dev`, `libxml2-dev` |
+| Hacking        | `nmap`, `testssl.sh`, `medusa`, `masscan`           |
+| Networking     | `openvpn`, `rclone`, `lynx`, `curl`, `tmux`         |
+| Virtualization | `virtualbox`, `xvfb`, `remmina`                     |
+| GUI & Fonts    | `flameshot`, `fonts-roboto`, `gnome-power-manager`  |
+| CLI Tools      | `grc`, `htop`, `coreutils`, `unzip`, `jq`           |
+
+---
