Update 06. NVIDIA Drivers Installation on Kali Linux.md

--- a/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
+++ b/3. Kali Linux/06. NVIDIA Drivers Installation on Kali Linux.md
@@ -1,5 +1,5 @@
 
-# Installing NVIDIA Drivers on Optimus Laptop (Kali Linux)
+# NVIDIA Drivers Installing on Optimus Laptop (Kali Linux)
 
 > An NVIDIA driver is software that acts as a bridge between your operating system and your NVIDIA graphics card (GPU).
 ---
