--- a/3. Kali Linux/07. Useful Tools Installation.md
+++ b/3. Kali Linux/07. Useful Tools Installation.md
@@ -6,7 +6,8 @@
 Install commonly used tools, libraries, fonts, network utilities, development packages, and penetration testing tools:
 
  ```php
-apt build-essential cmake ninja-build libgtkmm-3.0-dev libgtksourceviewmm-3.0-dev libxml++2.6-dev libsqlite3-dev gettext \
+sudo apt install -y \
+build-essential cmake ninja-build libgtkmm-3.0-dev libgtksourceviewmm-3.0-dev libxml++2.6-dev libsqlite3-dev gettext \
 libgspell-1-dev libcurl4-openssl-dev libuchardet-dev libfribidi-dev libvte-2.91-dev libfmt-dev libspdlog-dev \
 rclone vim fonts-lato fonts-open-sans fonts-roboto fonts-mononoki fonts-indic grc python3 python-is-python3 \
 gcc-multilib g++-multilib libtesseract-dev jq python3-pip openvpn network-manager-openvpn network-manager-openvpn-gnome \
@@ -19,6 +20,7 @@ gnome-tweaks gnome-shell-extensions sshuttle chisel network-manager-l2tp network
 thunderbird obs-studio pkg-config checkinstall autoconf automake libtool-bin libreadline-dev libusb-1.0-0-dev \
 libplist-dev libimobiledevice-dev libimobiledevice-glue-dev libtatsu-dev libzip-dev libimobiledevice-utils \
 mediainfo alacarte
+
 ```
 
 ---
