Update 01. Penetration Testing Lab Resources.md

--- a/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
+++ b/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
@@ -19,7 +19,7 @@ Setting up a lab environment is crucial for developing and testing offensive sec
 
 ---
 
-## 📚 Study & Roadmap Guides
+## 📚 OSCP Study & Roadmap Guides
 
 * **TJNull’s OSCP Prep Guide**:
   [🔗 https://www.netsecfocus.com/oscp/2019/03/29/The\_Journey\_to\_Try\_Harder-\_TJNulls\_Preparation\_Guide\_for\_PWK\_OSCP.html](https://www.netsecfocus.com/oscp/2019/03/29/The_Journey_to_Try_Harder-_TJNulls_Preparation_Guide_for_PWK_OSCP.html)
